<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/parentLayout"
        android:layout_height="match_parent"
        tools:context=".ui.weatherdetails.WeatherDetailsActivity">

    <include
            android:id="@+id/appToolbar"
            layout="@layout/app_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/detailsLayout"/>

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appToolbar"
            android:id="@+id/detailsLayout"
            android:padding="15dp"
            android:layout_height="0dp">

        <TextView
                android:text="city"
                android:textColor="@android:color/black"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/textCity"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/imageForecast"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"/>

        <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/ic_clear_day"
                android:id="@+id/imageForecast"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textSummary"
                app:layout_constraintTop_toBottomOf="@id/textCity"/>

        <TextView
                android:text="summary"
                android:textColor="@android:color/black"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/textSummary"
                app:layout_constraintTop_toBottomOf="@+id/imageForecast"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"/>

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textSummary"
                android:id="@+id/constraintLayout">

            <TextView
                    android:text="@string/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textSunriseLabel"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:text="sunrise value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textSunriseValue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:text="@string/sunset"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textSunsetLabel"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@id/textSunriseLabel"/>

            <TextView
                    android:text="sunset value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textSunsetValue"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toTopOf="@+id/textSunsetLabel"/>

            <TextView
                    android:text="@string/temperature_high"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTempHighLabel"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@id/textSunsetLabel"/>

            <TextView
                    android:text="temp high value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTempHighValue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toTopOf="@+id/textTempHighLabel"/>

            <TextView
                    android:text="@string/temperature_low"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTempLowLabel"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@id/textTempHighLabel"/>

            <TextView
                    android:text="temp low value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTempLowValue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toTopOf="@+id/textTempLowLabel"/>

            <TextView
                    android:text="@string/humidity"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:id="@+id/textHumidityLabel"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@id/textTempLowLabel"/>

            <TextView
                    android:text="humidity value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textHumidityValue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toTopOf="@+id/textHumidityLabel"/>

            <TextView
                    android:text="@string/pressure"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textPressureLabel"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@id/textHumidityLabel"/>

            <TextView
                    android:text="pressure value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textPressureValue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toTopOf="@+id/textPressureLabel"/>

            <TextView
                    android:text="@string/wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textWindSpeedLabel"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@id/textPressureLabel"/>

            <TextView
                    android:text="wind speed value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textWindSpeedValue"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                    app:layout_constraintTop_toTopOf="@+id/textWindSpeedLabel"/>

            <android.support.constraint.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guidelineCenter"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".50"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>